# scheduling_agent

./: .env.example  .gitignore  README.md  mcp_server.py  pyproject.toml  run.py
agent/: __init__.py  graph.py  llm.py  mcp_client.py  state.py
agent/nodes/: __init__.py  check_guardrails.py  classify.py  finalize.py  generate_reply.py  meeting_agent.py
data/: calendar.json  emails.json
output/: calendar.json  results.json
